# WakeOnLanService

./: .gitignore  LICENSE  README.md  build.ps1  debug.json  pyproject.toml
.github/: dependabot.yml  release.yml
.github/scripts/: apply-semver-label.ps1  classify-pr.ps1  compute-version.ps1  fetch-pr-diff.ps1  notify-discord.ps1  post-fork-notice.ps1  publish-test-summary.ps1
.github/workflows/: automerge.yml  classify-pr.yml  common-setup.yml  config.yml  docker-publish.yml  integration-tests.yml  intergration-tests.yml  label-gate.yml  linter.yml  main.yml  pr.yml  python-app.yml  unit-tests.yml
TODO/: plan-wakeOnLanServiceCiCd.prompt.md
TODO/reference/config/: dependabot.yml
TODO/reference/scripts/: apply-semver-label.ps1  classify-pr.ps1  compute-version.ps1  fetch-pr-diff.ps1  post-fork-notice.ps1  publish-test-summary.ps1
TODO/reference/workflows/: classify-pr.yml  main.yml  pr.yml
docker/: Dockerfile
src/: app.py  requirements.txt
src/templates/: app.html
src/wakeonlanservice/: __init__.py  app.py  logging_config.py
src/wakeonlanservice/blueprints/: status.py
src/wakeonlanservice/templates/: loading.html
tests/: conftest.py  test_app.py  test_env_vars.py  test_logging_config.py  test_status.py
tests/integration/: test_intergration.py
tests/unit/: test_app.py  test_status.py
