[project]
name = "wakeonlanservice"
version = "1.0.0"
description = "A Flask application for Wake On LAN service."
authors = [
    {name = "Steffen Froehlich",email = "drache42@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "wakeonlan (>=3.1.0,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.5"
python-dotenv = "^1.0.1"
pytest-cov = "^6.0.0"

[tool.poetry.group.production.dependencies]
gunicorn = "^23.0.0"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
# Exclude specific files or directories
exclude = ["__pycache__", "migrations"]

[tool.ruff.lint]
# Enable specific rules
select = [
    "E",  # Pyflakes error codes
    "F",  # Pyflakes error codes
    "C",  # PEP8 coding style
    "N",  # Naming conventions
    "B",  # Bugbear codes
    "Q",  # Quotes
    "S",  # Security
]

# Disable specific rules
ignore = [
    "E501",  # Line length
    "S501",  # disable ssl check
]

# Enable autofix for specific rules
fixable = ["E", "F", "C", "N", "B", "Q", "S"]

# Ignore specific rules in test files
[tool.ruff.per-file-ignores]
"tests/test_*.py" = ["S101"]

[tool.ruff.format]
# Set the quote style to double quotes
quote-style = "double"

[tool.coverage.run]
omit = ["*/templates/*"]