[project]
name = "wakeonlanservice"
version = "1.0.0"
description = "A Flask application for Wake On LAN service."
authors = [
    {name = "Steffen Froehlich",email = "drache42@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "requests (>=2.33.0,<3.0.0)",
    "wakeonlan (>=3.3.0,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.15.15"
python-dotenv = "^1.2.1"
pytest-cov = "^7.1.0"
docker = "^7.1.0"
testcontainers = "^4.14.2"
pytest-logger = "^1.1.1"

[tool.poetry.group.production.dependencies]
gunicorn = "^23.0.0"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = ["error"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
# Exclude specific files or directories
exclude = ["__pycache__", "migrations"]

[tool.ruff.lint]
# Enable specific rules
select = [
    "E",  # Pyflakes error codes
    "F",  # Pyflakes error codes
    "C",  # PEP8 coding style
    "N",  # Naming conventions
    "B",  # Bugbear codes
    "Q",  # Quotes
    "S",  # Security
]

# Disable specific rules
ignore = [
    "E501",  # Line length
    "S501",  # disable ssl check
]

# Enable autofix for specific rules
fixable = ["E", "F", "C", "N", "B", "Q", "S"]

# Ignore specific rules in test files
per-file-ignores = {"tests/**/test_*.py" = ["S101"]}

[tool.ruff.format]
# Set the quote style to double quotes
quote-style = "double"

[tool.coverage.run]
omit = ["*/templates/*"]